# Opal-

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  install.sh  install_termux.sh  install_universal.sh  install_windows.bat  opal_cli  publish_github_packages.sh  publish_pypi.sh  pyproject.toml  quick_install.sh  registry.json  setup.py
.github/workflows/: python-package.yml
examples/: advanced_demo.op  advanced_features.op  arabic_demo.op  arabic_oop_demo.op  conditionals.op  functions.op  hello.op  import_demo.op  lists_strings.op  lowlevel_demo.op  math_demo.op  oop_demo.op  web_json_demo.op
examples/preview/: arabic_colors_demo.op  calculator.op  colors_demo.op  guessing_game.op  hardware_demo.op  hello.op  system_control_demo.op  temperature_converter.op  tui_demo.op
opal/: __init__.py  ast_nodes.py  c_transpiler.py  environment.py  interpreter.py  lexer.py  logo.py  main.py  opi.py  parser.py  tokens.py  updater.py  vm.py
opal/stdlib/: __init__.py  colors_lib.py  file_lib.py  hardware_lib.py  http_lib.py  io_lib.py  json_lib.py  list_lib.py  lowlevel_lib.py  math_lib.py  string_lib.py  system_lib.py  time_lib.py  tui_lib.py  type_lib.py
tests/: test_01_variables.op  test_02_control_flow.op  test_03_functions.op  test_04_oop.op  test_05_error_handling.op  test_06_advanced.op  test_07_stdlib.op  test_08_imports.op  test_c_complex.op  test_termux_install.sh  test_vm.op
