[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opal-lang"
version = "2.1.0"
description = "Opal - A powerful beginner-friendly programming language with Arabic and English support, colors, and C transpiler"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Opal Team", email = "opal@example.com"}
]
keywords = [
    "opal",
    "programming-language",
    "interpreter",
    "arabic",
    "english",
    "bilingual",
    "transpiler",
    "c-transpiler",
    "colors",
    "education",
    "beginner-friendly"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Other",  # Opal itself
    "Topic :: Education",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: Arabic",
    "Natural Language :: English",
]
dependencies = [
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "twine>=4.0",
    "build>=0.10",
]
http = [
    "requests>=2.28",
]
all = [
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.4.0",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/gcode4421-oss/Opal-"
Repository = "https://github.com/gcode4421-oss/Opal-"
Documentation = "https://github.com/gcode4421-oss/Opal-#readme"
"Bug Tracker" = "https://github.com/gcode4421-oss/Opal-/issues"
Changelog = "https://github.com/gcode4421-oss/Opal-/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/gcode4421-oss/Opal-"

[project.scripts]
opal = "opal.main:main"

[tool.setuptools]
packages = ["opal", "opal.stdlib"]

[tool.setuptools.package-data]
opal = ["*.py", "stdlib/*.py"]
